--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -163,7 +163,7 @@ error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
 error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo
 error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non superi 25 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore
-error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 e minore di 25 per ogni ogni ruolo \n - l'impegno complessivo sia almeno di 8 ore per ogni ruolo
+error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero massimo dei partecipanti sia 25 per ogni ogni ruolo \n - l'impegno complessivo sia almeno di 8 ore per ogni ruolo
 error.errore_tabella_fscPROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 8 ore
 error.errore_tabella_fscTRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non violi il vincolo: massimo 5 Partecipanti per Tutor
 error.errori_calcolo_tabella_riepilogo=Si è verificato un errore nel calcolo della tabella di riepilogo dei ruoli
@@ -265,7 +265,6 @@ label.allegato_comunicazione=Allegato:
 label.allegato_contratti_accordi_convenzioni=Contratti o accordi di altre forme di finanziamento
 label.allegato_non_inserito=Allegato non inserito
 label.allegato_risposta=Allegato:
-label.altri_finanziamenti=Altre forme di Finanziamento
 label.altro_personale=Altro personale
 label.ambito=Ambito:
 label.ambito_list=Ambito
@@ -354,7 +353,7 @@ label.contratto=Contratto
 label.contributo_annuale=Contributo Annuale
 label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
-label.costi_totali_eventi=Costi Totali Eventi
+label.costo_totale_eventi=Costo totale eventi
 label.crea_account=Crea Account
 label.crea_anagrafica=Crea Anagrafica
 label.creazione_evento=Creazione
@@ -464,9 +463,9 @@ label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
-label.eventi_definitivi_da_pfa_anno=Numero eventi definitivi provenienti dal PFA
-label.eventi_inseriti_pfa_anno=Numero eventi inseriti nel PFA
-label.eventi_manuali_defintivi_anno=Numero eventi manuali definitivi (escluso riedizioni)
+label.eventi_definitivi_da_pfa_anno=Eventi rendicontati corrispondenti al Piano Formativo
+label.eventi_inseriti_pfa_anno=Eventi previsti nel Piano Formativo
+label.eventi_manuali_defintivi_anno=Eventi rendicontati non corrispondenti al Piano Formativo (escluso riedizioni)
 label.eventi_piano_formativo=Eventi del piano formativo
 label.evento=Evento
 label.evento_contenuti=Contenuti dell'evento
@@ -724,6 +723,7 @@ label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.numero_partecipanti=Numero dei partecipanti
 label.numero_partecipanti=Numero partecipanti
+label.numero_partecipanti_acquisito_crediti=Numero partecipanti/tutor/docenti che hanno acquisito crediti
 label.numero_partecipanti_no_crediti=Numero partecipanti senza crediti
 label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
 label.nuova=Nuova
@@ -809,11 +809,10 @@ label.qualifica=Qualifica
 label.quota_partecipazione=Quota di partecipazione
 label.quote_di_partecipazione=Quote di partecipazione
 label.ragione_sociale=Ragione sociale
-label.rapportoAttuazione=Rapporto attuazione
+label.rapportoAttuazione=Percentuale eventi corrispondenti al Piano Formativo
 label.rapporto_costi_entrate=Rapporto Costi/Ricavi
-label.rapporto_economico=Rapporto Economico
 label.rapporto_eventi=Rapporto Eventi
-label.rapporto_obiettivi_regionali=Percentuale di eventi con Obiettivi Regionali
+label.rapporto_obiettivi_regionali=Percentuale eventi con Obiettivi Regionali
 label.rappresentante=Rappresentante
 label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.razionale=Razionale
@@ -833,10 +832,11 @@ label.reportPartecipantiXML=File XML
 label.required_fatturato=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato soprastanti)
 label.required_fatturato_personale_sanitario=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato del personale sanitario nella sezione Dati Accreditamento)
 label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
-label.resoconti_eventi=Resoconti Eventi
+label.resoconto=Resoconto
 label.resoconto_discipline=Resoconto Discipline Eventi
-label.resoconto_obiettivi=Resoconto Obiettivi Eventi
-label.resoconto_obiettivi_regionali=Resoconto Obiettivi Regionali Eventi
+label.resoconto_economico=Resoconto Economico
+label.resoconto_obiettivi=Resoconto Obiettivi strategici nazionali eventi
+label.resoconto_obiettivi_regionali=Resoconto Obiettivi strategici regionali eventi
 label.resoconto_professioni=Resoconto Professioni Eventi
 label.responsabile=Responsabile
 label.responsabile_amministrativo=Responsabile Amministrativo
@@ -847,7 +847,8 @@ label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
 label.responsabili_scientifici=Responsabili scientifici
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
-label.ricavi_da_sponsor=Ricavi da Sponsorizzazioni
+label.ricavi_altre_forme_finanziamento=Ricavi da altre forme di finanziamento
+label.ricavi_da_sponsor=Ricavi da sponsorizzazioni
 label.ricevuta=Ricevuta
 label.ricevute=Ricevute
 label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
@@ -965,6 +966,8 @@ label.to_provider_multipli=A: destinatari multipli
 label.to_segreteria=A: Segreteria ECM
 label.torna_in_visualizzazione=Torna in visualizzazione
 label.torna_login=Torna alla pagina di login
+label.totale_eventi_defintivi=Totale eventi rendicontati (incluso riedizioni)
+label.totale_eventi_defintivi_no_riedizioni=Eventi rendicontati nell'anno (escluso riedizioni)
 label.totale_ore=Totale ore
 label.totale_ore_frontali=Totale ore metodologie frontali
 label.totale_ore_interattive=Totale ore metodologie interattive
