Modifiche per demo elisa 15/16 novembre

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -135,7 +135,7 @@ error.campi_con_errori_azione_ruoliATTIVITA_DI_RICERCA=Alcuni campi delle azioni
 error.campi_con_errori_azione_ruoliAUDIT_CLINICO_ASSISTENZIALE=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
 error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per fase \n - almeno una figura partecipante per fase \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
 error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un responsabile per azione
-error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per azione \n - minimo 1 ora non frazionabile per le figure Partecipante
+error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per azione (il coordinatore non è obbligatorio) \n - minimo 1 ora non frazionabile per le figure Partecipante
 error.campi_con_errori_programma_fad=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_dettaglio_attivita=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_docenti=Alcuni campi dei docenti segnalati in rosso non sono stati inseriti correttamente
@@ -655,8 +655,8 @@ label.modifica_comitato=Inserimento/rimozione di componenti
 label.modifica_dati_anagrafici=Modifica dati anagrafici di {0} {1}
 label.modifica_eventi=Inserimento/rimozione di eventi
 label.modifica_evento=Modifica evento
-label.modifica_evento_accreditato=Modifica Evento {0} Accreditato dal Piano Formativo
-label.modifica_evento_tipo=Modifica Evento {0}
+label.modifica_evento_accreditato=Modifica Evento {0} ({1}) Accreditato dal Piano Formativo
+label.modifica_evento_tipo=Modifica Evento {0} ({1})
 label.modifica_profilo=Modifica Profilo
 label.modifica_relazione_annuale=Modifica Relazione Annuale {0}
 label.modifica_sede_legale=Modifica Sede Legale
@@ -795,7 +795,6 @@ label.prezzo=Prezzo
 label.privata=Privata
 label.procedura_formativa=Tipologia evento
 label.procedura_verifica_qualita=\u00C8 prevista una procedura di verifica della qualità percepita
-label.procedure_formative=Tipologie evento
 label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.professione=Professione
 label.professioni=Professioni
@@ -1027,7 +1026,7 @@ label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_valutazioni=Visualizza Valutazioni
 label.visualizzazione=Visualizzazione
 label.visualizzazione_comunicazione=Visualizzazione Comunicazione
-label.visualizzazione_evento=Visualisulizzazione Evento: {0}
+label.visualizzazione_evento=Visualisulizzazione Evento {0} ({1})
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
 label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di congressi e convegni
