modifiche per demo di elisa

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -395,6 +395,7 @@ label.data_pagamento=Data Pagamento
 label.data_scadenza_pagamento=Data scadenza pagamento
 label.data_ultima_modifica=Data Ultima Modifica
 label.data_ultima_risposta=Data ultima risposta
+label.date=Date
 label.date_intermedie=Date intermedie
 label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
@@ -456,6 +457,7 @@ label.domande_standard=Domande Standard
 label.dotazione_hardware_software=Dotazione hardware e software necessaria all'utente per svolgere l'evento
 label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
+label.edizione=Edizione
 label.elabora=Elabora
 label.elimina=Elimina
 label.elimina_tutti_eventi_da_pfa=Elimina tutti gli eventi dal Piano Formativo
@@ -574,6 +576,7 @@ label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.inserisci_relazione_annuale=Inserisci Relazione Annuale
 label.inserisci_sponsor=Inserisci Sponsor
 label.inserisci_valutazione=Inserisci Valutazione
+label.inserisci_valutazione_apprendimento=Inserisci Valutazione Apprendimento
 label.inserisci_valutazione_complessiva=Valutazione complessiva dell'Accreditamento
 label.inserite_nella_prossima_seduta=Nella prossima Seduta del {0} alle {1}
 label.inserito=inserito
@@ -766,6 +769,7 @@ label.orario_fine=Orario Fine
 label.orario_inizio=Orario Inizio
 label.ore=Ore
 label.ore_attivita=Ore Attività
+label.ore_corso=Ore corso
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
 label.pagInCorso=Pagamento in corso
