--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -477,6 +477,8 @@ label.eventi_definitivi_da_pfa_anno=Eventi rendicontati corrispondenti al Piano 
 label.eventi_inseriti_pfa_anno=Eventi previsti nel Piano Formativo
 label.eventi_manuali_defintivi_anno=Eventi rendicontati non corrispondenti al Piano Formativo (escluso riedizioni)
 label.eventi_piano_formativo=Eventi del piano formativo
+label.eventi_scadenza_pagamento=Eventi in scadenza per Pagamento/Rendicontazione
+label.eventi_scaduti_pagamento=Eventi scaduti e non rapportati
 label.evento=Evento
 label.evento_contenuti=Contenuti dell'evento
 label.evento_contiene_questi_contenuti=L'evento formativo prevede i seguenti contenuti?
