--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -499,6 +499,7 @@ label.fax=FAX
 label.fileDaFirmare=File da firmare
 label.file_descrizione=Descrizione
 label.file_nome=File
+label.filtri=Filtra:
 label.firma_digitalmente=Firma digitalmente
 label.forme_finanziamento_radio=Sono presenti forme di finanziamento?
 label.from=Da:
@@ -768,6 +769,7 @@ label.ore=Ore
 label.ore_attivita=Ore Attività
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
+label.osservatori=Osservatori ECM
 label.pagInCorso=Pagamento in corso
 label.paga=Paga
 label.pagamenti_annuali=Pagamenti Annuali
@@ -828,6 +830,7 @@ label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.razionale=Razionale
 label.recupera_password=Recupera password
 label.referee=Referee
+label.referee_ecm=Referee ECM
 label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
