modifiche richiesta al canale Comunicazioni ...
-aggiunto plugin multiselect
-patch al plugin
-sistemati css vari
-sistemate label varie (comunicazioneShow)
-modifiche alla lista comunicazioni

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1111,3 +1111,9 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.osservatore_ecm=Osservatore ECM
+label.provider_gruppoA=Provider di Gruppo A
+label.provider_gruppoB=Provider di Gruppo B
+label.provider_standard=Provider Standard
+label.provider_provvisorio=Provider Provvisorio
+label.provider_filter=Filtro Provider:
