Controllo codice fiscale dei file firmati su tutti gli allegati firmati (mancano solo allegati dell'evento)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -144,6 +144,7 @@ error.campi_mancanti_responsabile_segreteria=Alcuni campi del responsabile della
 error.campi_mancanti_responsabili=Alcuni campi dei responsabili scientifici segnalati in rosso non sono stati inseriti correttamente
 error.campi_mancanti_sponsor=Alcuni campi degli sponsor segnati in rosso non sono stati inseriti correttamente
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
+error.codiceFiscale.firmatario=il codice fiscale del firmatario non corrisponde al Legale Rappresentante o suo Delegato
 error.complete=campo non completo
 error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
 error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
