Conferma eliminazione per eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -753,7 +753,7 @@ label.nuova_password=Nuova Password
 label.nuova_risposta=Nuova Risposta
 label.nuovo=Nuovo
 label.nuovo_evento=Nuovo Evento
-label.nuovo_evento_da_pfa=Nuovo evento da PFA
+label.nuovo_evento_da_pfa=Evento da PFA
 label.nuovo_piano_formativo=Nuovo piano formativo
 label.nuovo_provider=Nuovo provider
 label.nuovo_utente=Nuovo Utente
@@ -1044,7 +1044,7 @@ label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_valutazioni=Visualizza Valutazioni
 label.visualizzazione=Visualizzazione
 label.visualizzazione_comunicazione=Visualizzazione Comunicazione
-label.visualizzazione_evento=Visualisulizzazione Evento {0} ({1})
+label.visualizzazione_evento=Visualizzazione Evento {0} ({1})
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
 label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di congressi e convegni
