Ricerca su eventi...manca polimorfismo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -228,6 +228,7 @@ label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
 label.RES=formazione residenziale (RES)
+label.a=A
 label.abilita_campi=Abilita campi
 label.abilita_id_editabili=Abilita campi editabili
 label.abilita_modifica_campi=Abilita modifica ai campi
@@ -321,6 +322,7 @@ label.caratteri_rimanenti=caratteri rimanenti
 label.carica=Carica
 label.causale=Causale
 label.cellulare=Cellulare
+label.cerca=Cerca
 label.cerca_persona=Cerca persona
 label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
@@ -376,6 +378,7 @@ label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
 label.crediti_formativi_attribuiti_utente=Crediti ECM attribuiti dal Provider
 label.crediti_formativi_proposti_dal_sistema=Crediti ECM proposti dal sistema
 label.cv=Curriculum vitae
+label.da=Da
 label.da_inserire=(non inserito)
 label.da_inserire_nel_odg=Da inserire nell'ordine del giorno
 label.da_integrare=Da integrare
@@ -549,6 +552,7 @@ label.info_account=Accedi all'area riservata
 label.info_applicazione_integrazione=Le modifche saranno applicate solo dopo approvazione da parte della Segreteria ECM
 label.info_blocco_legali=Accedendo alla sezione Dati dei Responsabili, i dati del Legale Rappresentante e del Delegato del Legale Rappresentante non saranno più modificabili in quanto utilizzati per il controllo della firma digitale apposta sui file allegati. Qualora il Provider abbia previsto la figura del Delegato del Legale Rappresentante il controllo sulla firma digitale dei file sarà effettuato sui dati del Delegato del Legale Rappresentante
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
+label.info_evento=Info Eventi
 label.info_inserimento_piano_formativo=Affinché l’inserimento del Piano Formativo sia abilitato è necessario aver inserito tutti i dati richiesti per l’accreditamento provvisorio. L’inserimento del Piano Formativo è obbligatorio ai fini della validazione della domanda di accreditamento
 label.info_metodologie_interattive=ATTENZIONE: nel caso in cui siano selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/docente)
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
@@ -876,6 +880,7 @@ label.responsabili_scientifici=Responsabili scientifici
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
 label.ricavi_altre_forme_finanziamento=Ricavi da altre forme di finanziamento
 label.ricavi_da_sponsor=Ricavi da sponsorizzazioni
+label.ricerca_evento=Ricerca Evento
 label.ricevuta=Ricevuta
 label.ricevute=Ricevute
 label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
