Ricerca comunicazioni WIP

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -363,12 +363,13 @@ label.conferma_valutazione=Conferma Valutazione
 label.contrassegna_come_letta=Contrassegna come letta
 label.contratto=Contratto
 label.contributo_annuale=Contributo Annuale
+label.contributo_annuale_provider=Contributi Annuali del Provider
 label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
 label.costo_totale_eventi=Costo totale eventi
 label.crea_account=Crea Account
 label.crea_anagrafica=Crea Anagrafica
-label.creazione_evento=Creazione
+label.creazione_evento=Crea Evento
 label.creazione_nuovo_evento=Creazione Nuovo Evento {0}
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
@@ -475,6 +476,7 @@ label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
 label.esempio_modello=Modello di esempio
 label.esiste_traduzione=Esiste un sistema di traduzione simultanea?
+label.esito_ricerca=(Esito Ricerca)
 label.esito_valutazione=Esito Valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
@@ -484,6 +486,7 @@ label.eventi_definitivi_da_pfa_anno=Eventi rendicontati corrispondenti al Piano 
 label.eventi_inseriti_pfa_anno=Eventi previsti nel Piano Formativo
 label.eventi_manuali_defintivi_anno=Eventi rendicontati non corrispondenti al Piano Formativo (escluso riedizioni)
 label.eventi_piano_formativo=Eventi del piano formativo
+label.eventi_provider=Eventi del Provider
 label.eventi_scadenza_pagamento=Eventi in scadenza per Pagamento/Rendicontazione
 label.eventi_scaduti_pagamento=Eventi scaduti e non rapportati
 label.evento=Evento
@@ -758,7 +761,7 @@ label.nuova_password=Nuova Password
 label.nuova_risposta=Nuova Risposta
 label.nuovo=Nuovo
 label.nuovo_evento=Nuovo Evento
-label.nuovo_evento_da_pfa=Evento da PFA
+label.nuovo_evento_da_pfa=Crea Evento da PFA
 label.nuovo_piano_formativo=Nuovo piano formativo
 label.nuovo_provider=Nuovo provider
 label.nuovo_utente=Nuovo Utente
@@ -797,6 +800,7 @@ label.password_dimenticata=Hai dimenticato la password?
 label.pec=PEC
 label.permessi=Permessi
 label.persone=Persone
+label.pfa_provider=Piano Formativo del Provider
 label.pianoQualita=Piano di Qualità
 label.piano_formativo=Piano Formativo
 label.piano_formativo_anno=Piano Formativo relativo all''anno {0}
@@ -855,6 +859,7 @@ label.registrazione_provider=Registrazione Provider
 label.relazioneFinale=Relazione Finale
 label.relazione_annuale=Relazione Annuale
 label.relazione_annuale_anno=Relazione Annuale {0}
+label.relazione_annuale_provider=Relazione Annuale del Provider
 label.rendicontazione_inviata=Rendicontazione inviata
 label.rendiconto=Rendiconto
 label.reportPartecipanti=Report Partecipanti
@@ -895,7 +900,7 @@ label.richieste_accreditamento=Richieste di accreditamento
 label.richieste_standard_accreditamento=Richieste di accreditamento Standard
 label.ricordami=Ricordami
 label.riedita=Riedita
-label.riedizione_evento=Riedizione
+label.riedizione_evento=Crea Riedizione
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
 label.riepilogo_evento=Riepilogo dell''Evento {0}
 label.riepilogo_piano_formativo=Riepilogo degli Eventi inseriti nel Piano Formativo
