--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -133,8 +133,8 @@ error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
 error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
 error.campi_con_errori_azione_ruoliATTIVITA_DI_RICERCA=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti
 error.campi_con_errori_azione_ruoliAUDIT_CLINICO_ASSISTENZIALE=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
-error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per fase \n - almeno una figura partecipante per fase \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
-error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un responsabile per azione
+error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle fasi segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per fase (il coordinatore non è obbligatorio) \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
+error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un responsabile per azione (il responsabile non è obbligatorio)
 error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per azione (il coordinatore non è obbligatorio) \n - minimo 1 ora non frazionabile per le figure Partecipante
 error.campi_con_errori_programma_fad=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_dettaglio_attivita=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
@@ -217,11 +217,11 @@ error.troppi_partecipanti_per_tutor=Il numero dei Partecipanti supera il rapport
 error.troppi_responsabili3=I responsabili scientifici devono essere al massimo 3
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
-error.vincolo_partecipanti_tutorATTIVITA_DI_RICERCA=\u00C8 obbligatorio inserire almeno un ruolo Partecipante per fase
-error.vincolo_partecipanti_tutorAUDIT_CLINICO_ASSISTENZIALE=\u00C8 obbligatorio inserire almeno un ruolo Partecipante per fase
-error.vincolo_partecipanti_tutorGRUPPI_DI_MIGLIORAMENTO=\u00C8 obbligatorio inserire almeno un ruolo Partecipante per fase
-error.vincolo_partecipanti_tutorPROGETTI_DI_MIGLIORAMENTO=\u00C8 obbligatorio inserire almeno un ruolo Partecipante per fase
-error.vincolo_partecipanti_tutorTRAINING_INDIVIDUALIZZATO=\u00C8 obbligatorio inserire almeno un ruolo Partecipante e un ruolo Tutor per fase
+error.vincolo_partecipanti_tutorATTIVITA_DI_RICERCA=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
+error.vincolo_partecipanti_tutorAUDIT_CLINICO_ASSISTENZIALE=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
+error.vincolo_partecipanti_tutorGRUPPI_DI_MIGLIORAMENTO=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
+error.vincolo_partecipanti_tutorPROGETTI_DI_MIGLIORAMENTO=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante
+error.vincolo_partecipanti_tutorTRAINING_INDIVIDUALIZZATO=\u00C8 obbligatorio inserire nel programma almeno un ruolo Partecipante e un ruolo Tutor
 error.xml_evento_validation_with_db=Validazione dati evento fallita
 error.xml_validation=Errore di validazione dell'XML
 label.FAD=formazione a distanza (FAD)
@@ -1126,3 +1126,4 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+error.selezionare_tipologia_inserimento_programma=Selezionare una tipologia di Evento FSC per procedere con l'inserimento del Programma
