--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -324,6 +324,8 @@ label.carica=Carica
 label.causale=Causale
 label.cellulare=Cellulare
 label.cerca=Cerca
+label.cerca_comunicazione=Cerca Comunicazione
+label.cerca_evento=Cerca Evento
 label.cerca_persona=Cerca persona
 label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
@@ -886,7 +888,6 @@ label.responsabili_scientifici=Responsabili scientifici
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
 label.ricavi_altre_forme_finanziamento=Ricavi da altre forme di finanziamento
 label.ricavi_da_sponsor=Ricavi da sponsorizzazioni
-label.ricerca_evento=Ricerca Evento
 label.ricevuta=Ricevuta
 label.ricevute=Ricevute
 label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
