--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -129,6 +129,7 @@ engineering.test_firma=Test Firma
 engineering.test_mypay=Test MyPay
 error._free_msg={0}
 error.almenouno.empty=almeno uno dei campi è obbligatorio
+error.anticipazione_data_non_possibile=Non è possibile anticipare la data di inizio di un Evento già accreditato
 error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
 error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
 error.campi_con_errori_azione_ruoliATTIVITA_DI_RICERCA=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti
@@ -152,9 +153,13 @@ error.csv_import_eventi_piano_formativo_error=Importazione eventi da CSV fallita
 error.csv_to_xml_report_error=Errore durante la produzione del file XML da CSV
 error.data_fine_non_valida=La data di fine non può essere antecedente alla data di inizio
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
-error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
-error.data_intermedia_res_non_valida=Le date intermedie devono essere comprese tra la data di inizio e la data di fine
+error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) / 10 giorni (Riedizione) dalla data del suo inizio.
+error.data_intermedia_annullata=Non è possibile annullare la data intermedia
+error.data_intermedia_res_non_valida=Le date intermedie devono essere strettamente comprese tra la data di inizio e la data di fine
+error.data_intermedia_ripetuta=Data intermedia ripetuta
 error.data_non_valida=Data non valida! La Seduta non può essere inserita in una data precedente a quella di oggi.
+error.date_non_separabili=Data di inizio e data di fine evento devono coincidere
+error.date_non_unificabili=Data di inizio e data di fine evento non possono coincidere
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
 error.durata_minima_complessiva_non_raggiunta=Durata minima complessiva dell'evento non raggiunta
 error.elaborazione_pendente=Invio non concesso.\u00c8 gi\u00e0 presente un invio pendente in fase di elaborazione
@@ -359,6 +364,7 @@ label.conferma=Conferma
 label.conferma_crediti_proposti_dal_sistema=Conferma crediti proposti dal sistema
 label.conferma_evento=Conferma Evento
 label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
+label.conferma_modifiche_evento=Valida modifiche
 label.conferma_password=Conferma Password
 label.conferma_valutazione=Conferma Valutazione
 label.contrassegna_come_letta=Contrassegna come letta
