modifiche validator FSC ruoli (coordinatore / responsabile)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -167,11 +167,11 @@ error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
 error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
-error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo
-error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non superi 25 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore
-error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero massimo dei partecipanti sia 25 per ogni ogni ruolo \n - l'impegno complessivo sia almeno di 8 ore per ogni ruolo
-error.errore_tabella_fscPROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 8 ore
-error.errore_tabella_fscTRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non violi il vincolo: massimo 5 Partecipanti per Tutor
+error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - massimo un partecipante per il ruolo Coordinatore
+error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non superi 25 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore \n - massimo un partecipante per il ruolo Coordinatore
+error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero massimo dei partecipanti sia 25 per ogni ogni ruolo \n - l'impegno complessivo sia almeno di 8 ore per ogni ruolo \n - massimo un partecipante per il ruolo Coordinatore
+error.errore_tabella_fscPROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 8 ore \n - massimo un partecipante per il ruolo Coordinatore e per il ruolo Responsabile
+error.errore_tabella_fscTRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non violi il vincolo: massimo 5 Partecipanti per Tutor \n - massimo un partecipante per il ruolo Coordinatore
 error.errori_calcolo_tabella_riepilogo=Si è verificato un errore nel calcolo della tabella di riepilogo dei ruoli
 error.file_non_firmato=Il file deve essere firmato digitalmente
 error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
