--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -285,6 +285,7 @@ label.ambito=Ambito:
 label.ambito_list=Ambito
 label.anagrafica_salvata=L'anagrafica è stata salvata con successo
 label.anagrafiche=Anagrafiche
+label.anagrafiche_evento=Anagrafiche Relative agli Eventi
 label.anagrafiche_provider=Anagrafiche del provider
 label.anagrafiche_ruoli_eventi=Anagrafiche Ruoli Eventi
 label.anagrafiche_ruoli_provider=Anagrafiche Ruoli Provider
@@ -389,6 +390,8 @@ label.crediti_formativi_attribuiti_evento=Crediti attribuiti all'evento
 label.crediti_formativi_attribuiti_utente=Crediti ECM attribuiti dal Provider
 label.crediti_formativi_proposti_dal_sistema=Crediti ECM proposti dal sistema
 label.cv=Curriculum vitae
+label.cv_aggiornato=CV Aggiornato
+label.cv_non_aggiornato=CV Non Aggiornato
 label.da=Da
 label.da_inserire=(non inserito)
 label.da_inserire_nel_odg=Da inserire nell'ordine del giorno
@@ -981,6 +984,7 @@ label.sposta=Sposta
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_accreditamento=Stato Accreditamento
+label.stato_cv=Stato CV
 label.stato_destinazione=Stato di Destinazione della Domanda di Accreditamento
 label.stato_domanda=Stato Domanda
 label.stato_inserimento=Stato Inserimento
