Gestione Anagrafiche Ruoli eventi e update CV

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1073,6 +1073,7 @@ label.visualizza_lista_persone=Visualizza tutte le persone
 label.visualizza_valutazioni=Visualizza Valutazioni
 label.visualizzazione=Visualizzazione
 label.visualizzazione_comunicazione=Visualizzazione Comunicazione
+label.visualizzazione_dati_anagrafici=Visualizzazione dati anagrafici di {0} {1}
 label.visualizzazione_evento=Visualizzazione Evento {0} ({1})
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
