inserite registrazioni partecipanti RES

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -214,7 +214,7 @@ error.select=selezionare almeno un valore
 error.selezionare_tipologia_inserimento_programma=Selezionare una tipologia di Evento FSC per procedere con l'inserimento del Programma
 error.selezionare_tipologia_sede=Selezionare almeno una tipologia di Sede
 error.solo_autocertificazione_selezionabile=\u00C8 possibile selezionare solo la modalità di verifica "autocertificazione" per gli eventi di tipologia "convegno/congresso"
-error.solo_pause_programma_res=Il programma non può essere composto di sole pause, inserire almeno un'attività
+error.solo_pause_programma_res=Il programma non può essere composto di sole pause, verifiche di apprendimento e registrazione partecipanti, inserire almeno un'attività
 error.stato_elaborazione_cogeaps=Errore imprevisto urante la richiesta di stato elaborazione al Co.Ge.A.P.S.
 error.stessoCf=il delegato del legale rappresentante non può avere lo stesso codice fiscale del legale rappresentante
 error.troppi_partecipanti100=Il numero massimo di partecipanti per questa tipologia di evento è di 100 partecipanti
@@ -603,6 +603,7 @@ label.inserisci_partner=Inserisci Partner
 label.inserisci_pausa=Inserisci Pausa
 label.inserisci_persona=Inserisci Persona
 label.inserisci_piano_formativo=Inserisci Piano Formativo
+label.inserisci_registrazione_partecipanti=Inserisci Registrazione Partecipanti
 label.inserisci_relazione_annuale=Inserisci Relazione Annuale
 label.inserisci_sponsor=Inserisci Sponsor
 label.inserisci_valutazione=Inserisci Valutazione
