--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -134,7 +134,7 @@ error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
 error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
 error.campi_con_errori_azione_ruoliATTIVITA_DI_RICERCA=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti
 error.campi_con_errori_azione_ruoliAUDIT_CLINICO_ASSISTENZIALE=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
-error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle fasi segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per fase (il coordinatore non è obbligatorio) \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
+error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle fasi segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore (il coordinatore non è obbligatorio) \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
 error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un responsabile per azione (il responsabile non è obbligatorio)
 error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per azione (il coordinatore non è obbligatorio) \n - minimo 1 ora non frazionabile per le figure Partecipante
 error.campi_con_errori_programma_fad=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
@@ -170,7 +170,7 @@ error.email_repeat=l'email deve coincidere
 error.empty=campo obbligatorio
 error.errore_tabella_fscATTIVITA_DI_RICERCA=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - massimo un partecipante per il ruolo Coordinatore
 error.errore_tabella_fscAUDIT_CLINICO_ASSISTENZIALE=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non superi 25 \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 10 ore \n - massimo un partecipante per il ruolo Coordinatore
-error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero massimo dei partecipanti sia 25 per ogni ogni ruolo \n - l'impegno complessivo sia almeno di 8 ore per ogni ruolo \n - massimo un partecipante per il ruolo Coordinatore
+error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero massimo dei partecipanti sia 25 \n - l'impegno complessivo per il partecipante sia almeno di 8 ore \n - massimo un partecipante per il ruolo Coordinatore
 error.errore_tabella_fscPROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 8 ore \n - massimo un partecipante per il ruolo Coordinatore e per il ruolo Responsabile
 error.errore_tabella_fscTRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non violi il vincolo: massimo 5 Partecipanti per Tutor \n - massimo un partecipante per il ruolo Coordinatore
 error.errori_calcolo_tabella_riepilogo=Si è verificato un errore nel calcolo della tabella di riepilogo dei ruoli
@@ -201,6 +201,7 @@ error.numero_referee=Selezionare esattamente 3 referee
 error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
 error.ora_non_valida1=Ora non valida! La Seduta non può essere inserita in un orario già passato.
 error.ora_non_valida2=Ora non valida! La Seduta non può essere inserita in un orario comprendente i prossimi 30 minuti.
+error.partecipanti_AUDIT_ore=Minimo 2 ore non frazionabili multiple di 2 per le figure di tipo partecipante
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
